# auto-mlm-pipes

./: .gitignore  pyproject.toml
configs/colbert/bert/: bert-base.yaml
configs/colbert/modernbert/: modernbert-base.yaml
configs/dummies/: colbert-cpu.yaml  encoder-mlm-cpu.yaml  encoder-rtd-cpu.yaml  encoder-span-corruption-cpu.yaml  encoder-wwm-cpu.yaml  glm-cpu.yaml  retromae-cpu.yaml  smoke-test.yaml  splade-cpu.yaml
configs/efcamdat/colbert/: README.md
configs/efcamdat/encoder/: albert-base-v2-mlm.yaml  albert-base-v2-span-corruption.yaml  albert-base-v2-wwm.yaml  albert-large-v2-mlm.yaml  albert-large-v2-span-corruption.yaml  albert-large-v2-wwm.yaml  albert-xlarge-v2-mlm.yaml  albert-xlarge-v2-span-corruption.yaml  albert-xlarge-v2-wwm.yaml  albert-xxlarge-v2-mlm.yaml  albert-xxlarge-v2-span-corruption.yaml  albert-xxlarge-v2-wwm.yaml  bert-base-mlm.yaml  bert-base-rtd.yaml  bert-base-span-corruption.yaml  bert-base-wwm.yaml  bert-large-mlm.yaml  bert-large-rtd.yaml  bert-large-span-corruption.yaml  bert-large-wwm.yaml  debertav3-base-mlm.yaml  debertav3-base-rtd.yaml  debertav3-base-wwm.yaml  (+39 more)
data/: dummy.txt  dummy_pairs.jsonl
deploy/: project-setup-remote.sh  run-all-mlm-efcamdat.sh  run-multilingual-mlm-efcamdat.sh  run-smoke-test.sh  sync-results-gdrive.sh  vastai-monitoring.md  vastai-pipeline-deploy-tmux.md
docs/: mlm-models-by-size.md  resources.md
pipelines/: config.py  data_utils.py  logging_utils.py  train_colbert.py  train_encoder.py  train_glm.py  train_retromae.py  train_splade.py
scripts/: generate_efcamdat_configs.py  train-all-mlm.sh
(+23 files in other folders)
